option java_multiple_files = true;
package com.pusulait.grpc.lesson;

message Classroom {
  required string  name = 1;
  required string lesson_code = 2;
  repeated Student students = 3;
}

message Student {
  required string  first_name = 1;
  required string last_name = 2;
  required int32 age = 3;
}

message RecordRequest{
  required Student student = 1;
  required Classroom classroom = 2;
}

message RecordResult {
  required RecordResultEnum recordResultEnum = 1;
}

enum RecordResultEnum {
  SUCCESS = 0;
  FAIL = 1;
}

service RecordService {
  rpc record (Student) returns (RecordResult);
  rpc record2 (RecordRequest) returns (RecordResult);

}